// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/flex/demo/align.tsx extend context correctly 1`] = `
Array [
  <p>
    Select justify :
  </p>,
  <br />,
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="flex-start"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        flex-start
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="center"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        center
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="flex-end"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        flex-end
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="space-between"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        space-between
      </span>
    </label>
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked"
    >
      <span
        class="ant-radio ant-wave-target ant-radio-checked"
      >
        <input
          checked=""
          class="ant-radio-input"
          type="radio"
          value="space-around"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        space-around
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="space-evenly"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        space-evenly
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <p>
    Select align :
  </p>,
  <br />,
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="flex-start"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        flex-start
      </span>
    </label>
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked"
    >
      <span
        class="ant-radio ant-wave-target ant-radio-checked"
      >
        <input
          checked=""
          class="ant-radio-input"
          type="radio"
          value="center"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        center
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="flex-end"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        flex-end
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <div
    class="ant-flex ant-flex-justify-space-around ant-flex-align-center"
    style="width: 100%; height: 120px; border-radius: 6px; border: 1px solid #40a9ff;"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
  </div>,
]
`;

exports[`renders components/flex/demo/align.tsx extend context correctly 2`] = `[]`;

exports[`renders components/flex/demo/basic.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked"
    >
      <span
        class="ant-radio ant-wave-target ant-radio-checked"
      >
        <input
          checked=""
          class="ant-radio-input"
          type="radio"
          value="row"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        row
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="column"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        column
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <div
    class="ant-flex ant-flex-direction-row"
  >
    <div
      class="ant-card ant-card-bordered ant-card-hoverable ant-card-small"
    >
      <div
        class="ant-card-body"
      >
        <p>
          Card content
        </p>
        <p>
          Card content
        </p>
        <p>
          Card content
        </p>
      </div>
    </div>
    <div
      class="ant-card ant-card-bordered ant-card-hoverable ant-card-small"
    >
      <div
        class="ant-card-body"
      >
        <p>
          Card content
        </p>
        <p>
          Card content
        </p>
        <p>
          Card content
        </p>
      </div>
    </div>
    <div
      class="ant-card ant-card-bordered ant-card-hoverable ant-card-small"
    >
      <div
        class="ant-card-body"
      >
        <p>
          Card content
        </p>
        <p>
          Card content
        </p>
        <p>
          Card content
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/flex/demo/basic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/flex/demo/combination.tsx extend context correctly 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-hoverable"
  style="width: 530px;"
>
  <div
    class="ant-card-body"
    style="padding: 0px; overflow: hidden;"
  >
    <div
      class="ant-flex ant-flex-justify-space-between"
    >
      <img
        alt=""
        src="https://tailwindcss.com/_next/static/media/sarah-dayan.de9b3815.jpg"
        style="display: block; width: 192px;"
      />
      <div
        class="ant-flex ant-flex-justify-space-between ant-flex-direction-column ant-flex-align-flex-start"
        style="padding: 32px;"
      >
        <h3
          class="ant-typography"
        >
          “antd is an enterprise-class UI design language and React UI library.”
        </h3>
        <div
          class="ant-flex ant-flex-direction-column ant-flex-align-flex-start"
        >
          <a
            class="ant-btn ant-btn-link"
            href="https://github.com/zombieJ"
            style="padding: 0px;"
            target="_blank"
          >
            <span>
              zombieJ
            </span>
          </a>
          <h5
            class="ant-typography"
          >
            ant-design team core munber
          </h5>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/flex/demo/combination.tsx extend context correctly 2`] = `[]`;

exports[`renders components/flex/demo/gap.tsx extend context correctly 1`] = `
Array [
  <p>
    Select gap :
  </p>,
  <br />,
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked"
    >
      <span
        class="ant-radio ant-wave-target ant-radio-checked"
      >
        <input
          checked=""
          class="ant-radio-input"
          type="radio"
          value="small"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        small
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="middle"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        middle
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="large"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        large
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <p>
    Custom gap :
  </p>,
  <br />,
  <div
    class="ant-slider ant-slider-horizontal"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track"
      style="left: 0%; width: 8%;"
    />
    <div
      class="ant-slider-step"
    />
    <div
      aria-disabled="false"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="8"
      class="ant-slider-handle"
      role="slider"
      style="left: 8%; transform: translateX(-50%);"
      tabindex="0"
    />
    <div
      class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-slider-tooltip ant-tooltip-placement-top"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-tooltip-arrow"
        style="position: absolute; bottom: 0px; left: 0px;"
      />
      <div
        class="ant-tooltip-content"
      >
        <div
          class="ant-tooltip-inner"
          role="tooltip"
        >
          8
        </div>
      </div>
    </div>
  </div>,
  <br />,
  <div
    class="ant-flex ant-flex-gap-small"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        Default
      </span>
    </button>
    <button
      class="ant-btn ant-btn-dashed"
      type="button"
    >
      <span>
        Dashed
      </span>
    </button>
    <button
      class="ant-btn ant-btn-link"
      type="button"
    >
      <span>
        Link
      </span>
    </button>
  </div>,
]
`;

exports[`renders components/flex/demo/gap.tsx extend context correctly 2`] = `[]`;

exports[`renders components/flex/demo/wrap.tsx extend context correctly 1`] = `
<div
  class="ant-flex ant-flex-wrap-wrap ant-flex-gap-small"
>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
</div>
`;

exports[`renders components/flex/demo/wrap.tsx extend context correctly 2`] = `[]`;
